--- a/static/common/plantilla_comprobante_pago.html
+++ b/static/common/plantilla_comprobante_pago.html
@@ -98,6 +98,16 @@
                     </td>
                 </tr>
             </table>
+            <table style="border: none;" cellspacing="1">
+                <tr style="font-size: 13px; padding:5px 0 0 0;">
+                    <td style="text-align: left;">
+                        CAE: {egreso-cae}
+                    </td>
+                    <td style="text-align: right;">
+                        Fecha Vencimiento: {egreso-fecha_vencimiento}
+                    </td>
+                </tr>
+            </table>
         </td>
         <td style=" width: 20% !important;"></td>
     </tr>
