--- a/static/common/plantilla_comprobante_pago.html
+++ b/static/common/plantilla_comprobante_pago.html
@@ -101,10 +101,10 @@
             <table style="border: none;" cellspacing="1">
                 <tr style="font-size: 13px; padding:5px 0 0 0;">
                     <td style="text-align: left;">
-                        CAE: {egreso-cae}
+                        CAE: {comprobantepago-cae}
                     </td>
                     <td style="text-align: right;">
-                        Fecha Vencimiento: {egreso-fecha_vencimiento}
+                        Fecha Vencimiento: {comprobantepago-cae_vencimiento}
                     </td>
                 </tr>
             </table>
