--- a/static/common/plantilla_comprobante_pago.html
+++ b/static/common/plantilla_comprobante_pago.html
@@ -98,12 +98,12 @@
                     </td>
                 </tr>
             </table>
-            <table style="border: none;" cellspacing="1">
+            <table style="border: none; width: 100% !important;" cellspacing="1">
                 <tr style="font-size: 13px; padding:5px 0 0 0;">
-                    <td style="text-align: left;">
+                    <td style="text-align: left; width: 45% !important;">
                         CAE: {comprobantepago-cae}
                     </td>
-                    <td style="text-align: right;">
+                    <td style="text-align: right; width: 45% !important;">
                         Fecha Vencimiento: {comprobantepago-cae_vencimiento}
                     </td>
                 </tr>
