--- a/static/modules/movimientofinanciero/diario.html
+++ b/static/modules/movimientofinanciero/diario.html
@@ -21,12 +21,12 @@
             <table id="tbl_movimientofinanciero" class="table table-striped table-bordered">
                 <thead>
                     <tr>
-                        <th>Cuotas</th>
-                        <th>Pago</th>
-                        <th>Año</th>
+                        <th>Fecha</th>
+                        <th>Cuota</th>
                         <th>Concepto</th>
-                        <th>Tipo</th>
                         <th>Importe</th>
+                        <th>Tipo</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
