--- a/static/modules/movimientofinanciero/tbl_movimientosmatriculado.html
+++ b/static/modules/movimientofinanciero/tbl_movimientosmatriculado.html
@@ -1,7 +1,7 @@
 <!--TBL_MOVIMIENTOMATRICULADO-->
 <tr style="font-size: 12px;">
     <td>FECHA</td>
-    <td>CUOTAS</td>
+    <td>MATRICULADO</td>
     <td>CONCEPTO</td>
     <td>TIPOPAGO</td>
     <td>$VALOR</td>
