--- a/static/modules/movimientofinanciero/diario.html
+++ b/static/modules/movimientofinanciero/diario.html
@@ -10,7 +10,7 @@
 <div class="col-md-8 col-sm-8 col-xs-8">
     <div class="x_panel">
         <div class="x_title">
-            <h2><i class="fa fa-table"></i>&nbsp;&nbsp; Listado de Movimientos Diario</h2>
+            <h2><i class="fa fa-table"></i>&nbsp;&nbsp; {titulo}</h2>
             <ul class="nav navbar-right panel_toolbox">
                 <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a></li>
                 <li><a class="close-link"><i class="fa fa-close"></i></a></li>
@@ -18,7 +18,7 @@
             <div class="clearfix"></div>
         </div>
         <div class="x_content">
-            <table id="tbl_movimientofinanciero" class="table table-striped table-bordered">
+            <table id="tbl_movimientomatriculado" class="table table-striped table-bordered">
                 <thead>
                     <tr>
                         <th>Fecha</th>
@@ -37,9 +37,15 @@
     </div>
 </div>
 <div class="col-md-4 col-sm-4 col-xs-4">
+    <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0px; padding-right: 0px;">
+        <button type="button" class="btn btn-danger" style="width: 100%; height: 100px;">
+            <i class="fa fa-usd" style="font-size: 20px;"></i><font style="font-size: 20px;"> {caja_total}</font> <br>
+            <font style="font-size: 13px;">Total Caja</font>
+        </button>
+    </div>
     <div class="x_panel">
         <div class="x_title">
-            <h2><i class="fa fa-plus-square"></i>&nbsp;&nbsp; Agregar movimiento en caja</h2>
+            <h2><i class="fa fa-plus-square"></i>&nbsp;&nbsp; Filtrar caja</h2>
             <ul class="nav navbar-right panel_toolbox">
                 <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a></li>
                 <li><a class="close-link"><i class="fa fa-close"></i></a></li>
@@ -48,26 +54,17 @@
         </div>
         <div class="x_content">
             <div class=" form">
-                <form class="form" id="formulario_guardar" method="post" action="{url_app}/movimientofinanciero/guardar">
+                <form class="form" id="formulario_guardar" method="post" action="{url_app}/movimientofinanciero/filtro_diario">
                     <div class="form-group">
-                        <label>Importe</label>
-                        <input type="number" class="form-control" id="importe" name="importe" required>
+                        <label>Fecha desde</label>
+                        <input type="date" class="form-control" id="desde" name="desde" required>
                     </div>
                     <div class="form-group">
-                        <label>Detalle</label>
-                        <textarea class="form-control" id="detalle" name="detalle" rows="7"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label>Concepto</label>
-                        <select class="form-control m-bot15" name="conceptopago" id="conceptopago" required>
-                            {slt_conceptopago}
-                        </select>
+                        <label>Fecha hasta</label>
+                        <input type="date" class="form-control" id="hasta" name="hasta" required>
                     </div>
                     <div class="col-lg-12" style="margin-top: 2%;" align="right">
-                        <input type="hidden" id="tipomovimiento" name="tipomovimiento" value="1" required>
-                        <input type="hidden" id="denominacion" name="denominacion" value="" required>
-                        <input type="hidden" id="numero_movimiento" name="numero_movimiento" value="" required>
-                        <a href="#" class="btn btn-app" onclick="confirma_formulario(1, '')"> <i class="fa fa-save"></i> Agregar </a>
+                        <button type="submit" class="btn btn-app"> <i class="fa fa-search"></i> Filtrar </a>
                     </div>
                 </form>
             </div>            
@@ -82,7 +79,7 @@
 <script src="{url_static}vendors/datatables.net-responsive-bs/js/responsive.bootstrap.js"></script>
 <script type="text/javascript" charset="utf-8">
     $(document).ready(function() {
-        $('#tbl_movimientofinanciero').dataTable( {
+        $('#tbl_movimientomatriculado').dataTable( {
             "aaSorting": [[ 0, "asc" ]]
           , "iDisplayLength":10
         } );
