Agregando movimientos diarios

--- a/static/modules/movimientofinanciero/tbl_movimientosmatriculado.html
+++ b/static/modules/movimientofinanciero/tbl_movimientosmatriculado.html
@@ -7,9 +7,7 @@
     <td>$VALOR</td>
     <td>
         <center>
-            <button class="btn btn-success btn-xs" onclick="traerFormAbonar(MATRICULADOID,MATRICULAID,CCMID);" style="display: BTNABONAR;" title="Abonar cuota"><i class="fa fa-usd"></i></button>
-            <button class="btn btn-danger btn-xs" onclick="confirma_formulario(4, '{url_app}/matriculado/anular_pago_matricula/MATRICULADOID@MATRICULAID@CCMID');" style="display: BTNANULAR;" title="Anular Pago"><i class="fa fa-ban"></i></button>
-            <button class="btn btn-danger btn-xs" onclick="confirma_formulario(4, '{url_app}/matriculado/eliminar_pago_matricula/MATRICULADOID@MATRICULAID@CCMID');" style="display: BTNBORRAR;" title="Eliminar pago"><i class="fa fa-trash-o"></i></button>
+            <a class="btn btn-info btn-xs" href="files.php?f=comprobantepago/ComprobantePago-CCMID" target="_blank" title="Descargar curriculum"><i class="fa fa-download"></i></a>
         </center>
     </td>
 </tr>
