--- a/static/modules/matriculado/formulario_abonar_ajax.html
+++ b/static/modules/matriculado/formulario_abonar_ajax.html
@@ -14,9 +14,10 @@
                     <div class="form-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <label>Tipo Pago</label>
                         <select class="form-control m-bot15" name="tipopago" id="tipopago" onChange="controlaTipoPago();" required>
-                            <option value="1">Efectivo</option>
-                            <option value="2">Cheque</option>
-                            <option value="3">Transferencia</option>
+                            <option value="1">Transferencia</option>
+                            <option value="2">Depósito</option>
+                            <option value="3">Tarjeta de Débito</option>
+                            <option value="4">Tarjeta de Crédito</option>
                         </select>
                     </div>
                 </div>
