--- a/static/modules/matriculado/matriculas.html
+++ b/static/modules/matriculado/matriculas.html
@@ -133,7 +133,11 @@
                         <label>Número Transferencia</label>
                         <input type="text" class="form-control" name="numero_transferencia" id="numero_transferencia">
                     </div>
-                    <div class="form-group col-lg-4 col-lg-offset-8 col-md-12 col-sm-12 col-xs-12">
+                    <div class="form-group col-lg-4 col-lg-offset-4 col-md-12 col-sm-12 col-xs-12">
+                        <label>CUIT/CUIL</label>
+                        <input type="number" class="form-control" id="cuit" name="cuit" value="0" required>
+                    </div>
+                    <div class="form-group col-lg-4 col-md-12 col-sm-12 col-xs-12">
                         <label>Importe</label>
                         <input type="number" class="form-control" id="importe" name="importe" value="0" required>
                     </div>
