Agregando cuit al pago de matriculas

--- a/static/common/plantilla_comprobante_pago.html
+++ b/static/common/plantilla_comprobante_pago.html
@@ -82,6 +82,12 @@
                                 <td style="text-align: right; font-size: 12px;">{comprobantepago-importe_total}</td>
                                 <td style="text-align: right; font-size: 12px;">{comprobantepago-importe_total}</td>
                             </tr>
+                            <tr style=" text-align: center; font-size: 12px; width: 100% !important;">
+                                <td style="text-align: left; font-size: 12px;">{comprobantepago-detalle}</td>
+                                <td style="text-align: right; font-size: 12px;"></td>
+                                <td style="text-align: right; font-size: 12px;"></td>
+                                <td style="text-align: right; font-size: 12px;"></td>
+                            </tr>
                         </table>
                     </td>
                 </tr>
