--- a/static/modules/matriculado/formulario_abonar_ajax.html
+++ b/static/modules/matriculado/formulario_abonar_ajax.html
@@ -59,6 +59,12 @@
                     </div>
                 </div>
                 <div class="form-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="form-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <label>Detalle</label>
+                        <textarea class="form-control" id="detalle" name="detalle" rows="4"></textarea>
+                    </div>
+                </div>
+                <div class="form-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="form-group col-lg-12" style="margin-top: 2%;" align="right">
                         <input type="hidden" name="matriculado_id" value="{matriculado-matriculado_id}">
                         <input type="hidden" name="matricula_id" value="{matricula-matricula_id}">
