--- a/static/modules/titulo/panel.html
+++ b/static/modules/titulo/panel.html
@@ -36,6 +36,29 @@
             </div>            
         </div>
     </div>
+    <div class="x_panel">
+        <div class="x_title">
+            <h2><i class="fa fa-plus-square"></i>&nbsp;&nbsp; Actualización masiva de matrícula</h2>
+            <ul class="nav navbar-right panel_toolbox">
+                <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a></li>
+                <li><a class="close-link"><i class="fa fa-close"></i></a></li>
+            </ul>
+            <div class="clearfix"></div>
+        </div>
+        <div class="x_content">
+            <div class=" form">
+                <form class="form" id="formulario_guardar" method="post" action="{url_app}/titulo/editar_masivo">
+                    <div class="form-group">
+                        <label>Valor Matrícula</label>
+                        <input type="number" class="form-control" id="valor_matricula" name="valor_matricula" required>
+                    </div>
+                    <div class="col-lg-12" style="margin-top: 2%;" align="right">
+                        <a href="#" class="btn btn-app" onclick="confirma_formulario(1, '')"> <i class="fa fa-save"></i> Agregar </a>
+                    </div>
+                </form>
+            </div>            
+        </div>
+    </div>
 </div>
 <div class="col-md-8 col-sm-8 col-xs-8">
     <div class="x_panel">
