--- a/static/modules/titulo/editar.html
+++ b/static/modules/titulo/editar.html
@@ -54,7 +54,7 @@
                         <input type="number" class="form-control" id="valor_matricula" name="valor_matricula" required>
                     </div>
                     <div class="col-lg-12" style="margin-top: 2%;" align="right">
-                        <a href="#" class="btn btn-app" onclick="confirma_formulario(1, '')"> <i class="fa fa-save"></i> Agregar </a>
+                        <button type="submit" class="btn btn-app"> <i class="fa fa-edit"></i> Editar </button>
                     </div>
                 </form>
             </div>            
