--- a/static/modules/matriculado/matriculas.html
+++ b/static/modules/matriculado/matriculas.html
@@ -34,10 +34,12 @@
     </div>
 </div>
 <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12" id="div_formulario_matricula">
+    <!--
     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
         <button type="button" class="btn btn-danger btn-sm" style=" width: 100%; display:{btn_deuda_display}" id="btn_deuda" onClick="verDeuda();">Ver Deuda</button>
     </div>
-    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+    -->
+    <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-12 col-xs-12">
         <button type="button" class="btn btn-dark btn-sm" style=" width: 100%; display:{btn_movimientos_display}" id="btn_movimientos" onClick="verMovimientos();">Ver Movimientos</button>
     </div>
     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
