--- a/static/modules/matriculado/editar_matricula.html
+++ b/static/modules/matriculado/editar_matricula.html
@@ -38,7 +38,6 @@
                 </div>
                 <div class="form-group col-lg-4 col-md-12 col-sm-12 col-xs-12">
                     <label>Habilitación</label>    
-                    <input type="text" name="habilitacion" id="habilitacion" class="form-control" value="{matricula-habilitacion}" required>
                 </div>
                 <div class="form-group col-lg-4 col-md-12 col-sm-12 col-xs-12">
                     <label>Tomo</label>    
@@ -48,6 +47,8 @@
                     <input type="hidden" name="matriculado_id" value="{matriculado-matriculado_id}">
                     <input type="hidden" name="matricula_id" value="{matricula-matricula_id}">
                     <input type="hidden" name="matricula_original" id="matricula_original" value="{matricula-matricula}">
+                    <input type="hidden" name="habilitacion" id="habilitacion" value="0">
+                    <input type="hidden" name="tomo" id="tomo" value="0">
                     <a href="#" class="btn btn-app btn-danger" onclick="agregarMatricula({matriculado-matriculado_id})" style="background: #ac2925; color: #FFF;"><i class="fa fa-arrow-circle-left"></i> Volver</a>
                     <a href="#" class="btn btn-app" onclick="verificarEditarMatricula()"><i class="fa fa-edit"></i> Editar</a>
                 </div>
