Nuevo panel de matriculados

--- a/static/modules/matriculado/matriculas.html
+++ b/static/modules/matriculado/matriculas.html
@@ -541,33 +541,33 @@
         document.getElementById('btn_agregar_matricula').style.display = 'none';
         document.getElementById('btn_abonar_otros').style.display = 'inline-block';
         document.getElementById('btn_movimientos').style.display = 'inline-block';
-        document.getElementById('btn_deuda').style.display = 'inline-block';
+        //document.getElementById('btn_deuda').style.display = 'inline-block';
         document.getElementById('div_agregar_matricula').style.display = 'inline-block';
         document.getElementById('div_abonar_otros').style.display = 'none';
         document.getElementById('div_movimientos').style.display = 'none';
-        document.getElementById('div_deuda').style.display = 'none';
+        //document.getElementById('div_deuda').style.display = 'none';
     }
 
     function abonarOtros() {
         document.getElementById('btn_agregar_matricula').style.display = 'inline-block';
         document.getElementById('btn_abonar_otros').style.display = 'none';
         document.getElementById('btn_movimientos').style.display = 'inline-block';
-        document.getElementById('btn_deuda').style.display = 'inline-block';
+        //document.getElementById('btn_deuda').style.display = 'inline-block';
         document.getElementById('div_agregar_matricula').style.display = 'none';
         document.getElementById('div_abonar_otros').style.display = 'inline-block';
         document.getElementById('div_movimientos').style.display = 'none';
-        document.getElementById('div_deuda').style.display = 'none';
+        //document.getElementById('div_deuda').style.display = 'none';
     }
 
     function verMovimientos() {
         document.getElementById('btn_agregar_matricula').style.display = 'none';
         document.getElementById('btn_abonar_otros').style.display = 'inline-block';
         document.getElementById('btn_movimientos').style.display = 'inline-block';
-        document.getElementById('btn_deuda').style.display = 'inline-block';
+        //document.getElementById('btn_deuda').style.display = 'inline-block';
         document.getElementById('div_agregar_matricula').style.display = 'none';
         document.getElementById('div_abonar_otros').style.display = 'none';
         document.getElementById('div_movimientos').style.display = 'inline-block';
-        document.getElementById('div_deuda').style.display = 'none';
+        //document.getElementById('div_deuda').style.display = 'none';
     }
 
     function verDeuda() {
