--- a/static/modules/matriculado/editar_matricula.html
+++ b/static/modules/matriculado/editar_matricula.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="form-group col-lg-9 col-md-12 col-sm-12 col-xs-12">
                     <label>Título</label>
-                    <select class="form-control m-bot15" name="titulo" id="titulo" value="{matricula-}" required>
+                    <select class="form-control m-bot15" name="titulo" id="titulo" required>
                         <option value="{titulo-titulo_id}" selected>{titulo-denominacion}</option>
                         {slt_titulo}
                     </select>
@@ -27,7 +27,7 @@
                 </div>
                 <div class="form-group col-lg-9 col-md-12 col-sm-12 col-xs-12">
                     <label>Universidad</label>
-                    <select class="form-control m-bot15" name="universidad" id="universidad" value="{matricula-}" required>
+                    <select class="form-control m-bot15" name="universidad" id="universidad" required>
                         <option value="{universidad-universidad_id}" selected>{universidad-denominacion}</option>
                         {slt_universidad}
                     </select>
