Nuevo panel de matriculados

--- a/static/modules/matriculado/matriculas.html
+++ b/static/modules/matriculado/matriculas.html
@@ -34,16 +34,16 @@
     </div>
 </div>
 <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12" id="div_formulario_matricula">
-    <!--
     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+        <!--
         <button type="button" class="btn btn-danger btn-sm" style=" width: 100%; display:{btn_deuda_display}" id="btn_deuda" onClick="verDeuda();">Ver Deuda</button>
+        -->
+        <button type="button" class="btn btn-dark btn-sm" style=" width: 100%; display:{btn_agregar_matricula_display}" id="btn_agregar_matricula" onClick="agregarMatricula();">Agregar Matrícula</button>
     </div>
-    -->
     <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-12 col-xs-12">
         <button type="button" class="btn btn-dark btn-sm" style=" width: 100%; display:{btn_movimientos_display}" id="btn_movimientos" onClick="verMovimientos();">Ver Movimientos</button>
     </div>
     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-        <button type="button" class="btn btn-dark btn-sm" style=" width: 100%; display:{btn_agregar_matricula_display}" id="btn_agregar_matricula" onClick="agregarMatricula();">Agregar Matrícula</button>
         <button type="button" class="btn btn-danger btn-sm" style="display: {btn_abonar_otros_display}; width: 100%;" id="btn_abonar_otros" onClick="abonarOtros();"><i class="fa fa-usd"></i> Caja</button>
     </div>
     <div class="x_panel" id="div_agregar_matricula" style="display: {div_agregar_matricula_display};">
@@ -538,7 +538,7 @@
     }
 
     function agregarMatricula() {
-        document.getElementById('btn_agregar_matricula').style.display = 'none';
+        //document.getElementById('btn_agregar_matricula').style.display = 'none';
         document.getElementById('btn_abonar_otros').style.display = 'inline-block';
         document.getElementById('btn_movimientos').style.display = 'inline-block';
         //document.getElementById('btn_deuda').style.display = 'inline-block';
@@ -549,7 +549,7 @@
     }
 
     function abonarOtros() {
-        document.getElementById('btn_agregar_matricula').style.display = 'inline-block';
+        //document.getElementById('btn_agregar_matricula').style.display = 'inline-block';
         document.getElementById('btn_abonar_otros').style.display = 'none';
         document.getElementById('btn_movimientos').style.display = 'inline-block';
         //document.getElementById('btn_deuda').style.display = 'inline-block';
@@ -560,7 +560,7 @@
     }
 
     function verMovimientos() {
-        document.getElementById('btn_agregar_matricula').style.display = 'none';
+        //document.getElementById('btn_agregar_matricula').style.display = 'none';
         document.getElementById('btn_abonar_otros').style.display = 'inline-block';
         document.getElementById('btn_movimientos').style.display = 'inline-block';
         //document.getElementById('btn_deuda').style.display = 'inline-block';
