Nuevo panel de matriculados

--- a/static/modules/matriculado/matriculas.html
+++ b/static/modules/matriculado/matriculas.html
@@ -33,7 +33,7 @@
         </div>
     </div>
 </div>
-<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12" id="">
+<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12" id="div_formulario_matricula">
     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
         <!--
         <button type="button" class="btn btn-danger btn-sm" style=" width: 100%; display:{btn_deuda_display}" id="btn_deuda" onClick="verDeuda();">Ver Deuda</button>
@@ -521,7 +521,7 @@
         }).responseText;
         document.getElementById('div_formulario_matricula').innerHTML = div_editar_matricula;
     }
-
+    /*
     function agregarMatricula(matriculado_id) {
         var div_agregar_matricula = $.ajax({
             url: '{url_app}/matriculado/agregar_matricula_ajax/' + matriculado_id,
@@ -530,7 +530,7 @@
         }).responseText;
         document.getElementById('div_formulario_matricula').innerHTML = div_agregar_matricula;
     }
-
+    */
     function formularioCambiaEstado(matricula_id, estado_id) {
         document.getElementById('matricula_id').value = matricula_id;
         document.getElementById('estado_id').value = estado_id;
