--- a/static/modules/matriculado/matriculas.html
+++ b/static/modules/matriculado/matriculas.html
@@ -211,8 +211,8 @@
             </table>
         </div>
     </div>
+    <div class="x_panel" id="div_editar_matricula" style="display: none;"></div>
 </div>
-<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" id="div_editar_matricula" style="display: none;"></div>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
     <div class="x_panel">
         <div class="x_title">
@@ -519,8 +519,14 @@
                 dataType: 'text',
                 async: false
         }).responseText;
-        document.getElementById('div_formulario_matricula').innerHTML = div_editar_matricula;
+        document.getElementById('div_editar_matricula').innerHTML = div_editar_matricula;
+
+        document.getElementById('div_agregar_matricula').style.display = 'none';
+        document.getElementById('div_abonar_otros').style.display = 'none';
+        document.getElementById('div_movimientos').style.display = 'none';
+        document.getElementById('div_editar_matricula').style.display = 'inline-block';
     }
+
     /*
     function agregarMatricula(matriculado_id) {
         var div_agregar_matricula = $.ajax({
@@ -531,6 +537,7 @@
         document.getElementById('div_formulario_matricula').innerHTML = div_agregar_matricula;
     }
     */
+
     function formularioCambiaEstado(matricula_id, estado_id) {
         document.getElementById('matricula_id').value = matricula_id;
         document.getElementById('estado_id').value = estado_id;
@@ -545,6 +552,7 @@
         document.getElementById('div_agregar_matricula').style.display = 'inline-block';
         document.getElementById('div_abonar_otros').style.display = 'none';
         document.getElementById('div_movimientos').style.display = 'none';
+        document.getElementById('div_editar_matricula').style.display = 'none';
         //document.getElementById('div_deuda').style.display = 'none';
     }
 
@@ -556,6 +564,7 @@
         document.getElementById('div_agregar_matricula').style.display = 'none';
         document.getElementById('div_abonar_otros').style.display = 'inline-block';
         document.getElementById('div_movimientos').style.display = 'none';
+        document.getElementById('div_editar_matricula').style.display = 'none';
         //document.getElementById('div_deuda').style.display = 'none';
     }
 
@@ -567,6 +576,7 @@
         document.getElementById('div_agregar_matricula').style.display = 'none';
         document.getElementById('div_abonar_otros').style.display = 'none';
         document.getElementById('div_movimientos').style.display = 'inline-block';
+        document.getElementById('div_editar_matricula').style.display = 'none';
         //document.getElementById('div_deuda').style.display = 'none';
     }
 
@@ -578,6 +588,7 @@
         document.getElementById('div_agregar_matricula').style.display = 'none';
         document.getElementById('div_abonar_otros').style.display = 'none';
         document.getElementById('div_movimientos').style.display = 'none';
+        document.getElementById('div_editar_matricula').style.display = 'none';
         document.getElementById('div_deuda').style.display = 'inline-block';
     }
 </script>
