Nuevo panel de matriculados

--- a/static/modules/matriculado/editar_matricula.html
+++ b/static/modules/matriculado/editar_matricula.html
@@ -24,14 +24,14 @@
                 </div>
                 <div class="form-group col-lg-6 col-md-12 col-sm-12 col-xs-12">
                     <label>Universidad</label>
-                    <select class="form-control m-bot15" name="ed_universidad" id="universidad" required>
+                    <select class="form-control m-bot15" name="universidad" id="ed_universidad" required>
                         <option value="{universidad-universidad_id}" selected>{universidad-denominacion}</option>
                         {slt_universidad}
                     </select>
                 </div>
                 <div class="form-group col-lg-6 col-md-12 col-sm-12 col-xs-12">
                     <label>Título</label>
-                    <select class="form-control m-bot15" name="ed_titulo" id="titulo" required>
+                    <select class="form-control m-bot15" name="titulo" id="ed_titulo" required>
                         <option value="{titulo-titulo_id}" selected>{titulo-denominacion}</option>
                         {slt_titulo}
                     </select>
