Nuevo panel de matriculados

--- a/static/common/plantilla_comprobante_pago.html
+++ b/static/common/plantilla_comprobante_pago.html
@@ -83,6 +83,12 @@
                                         <td style="text-align: right;">{comprobantepago-importe_total}</td>
                                     </tr>
                                     <tr style=" text-align: center; font-size: 13px;">
+                                        <td style="text-align: left;"><b>Detalle:</b></td>
+                                        <td style="text-align: right;"></td>
+                                        <td style="text-align: right;"></td>
+                                        <td style="text-align: right;"></td>
+                                    </tr>
+                                    <tr style=" text-align: center; font-size: 13px;">
                                         <td style="text-align: left;">{comprobantepago-detalle}</td>
                                         <td style="text-align: right;"></td>
                                         <td style="text-align: right;"></td>
