--- a/static/common/plantilla_comprobante_pago.html
+++ b/static/common/plantilla_comprobante_pago.html
@@ -16,8 +16,8 @@
                     <table style="border: 1px #000 solid; width: 100% !important;" cellspacing="1">
                         <tr style="padding:5px 0 8px 0;">
                             <td style="width: 48% !important; text-align: center; font-size: 13px;">
-                                <img width="100" height="100" src='static/template/images/logo.jpg' class="text-align-center"/><br>
-                                <strong>Consejo Profesional<br> de la Ingeniería<br>La Rioja </strong>
+                                <img width="80" height="80" src='static/template/images/logo.jpg' class="text-align-center"/><br>
+                                <strong>Consejo Profesional de la Ingeniería La Rioja </strong>
                             </td>
                             <td style="width: 4% !important; border-left: 1px #000 solid; border-right: 1px #000 solid; border-bottom: 1px #000 solid; text-align: center; font-size: 15px;">
                                 <strong>RC</strong><br>
@@ -37,7 +37,7 @@
                                             La Rioja<br>
                                             Tel: 
                                         </td>
-                                        <td style="border-left: 1px #000 solid;  width: 50% !important; text-align: left; padding-left: 15px; font-size: 12px;">
+                                        <td style="border-left: 1px #000 solid;  width: 50% !important; text-align: right; padding-left: 15px; font-size: 12px;">
                                             <strong>CUIT: {configuracion-cuit}</strong><br>
                                             <strong>IIBB: </strong>{configuracion-ingresos_brutos}<br>
                                             <strong>Inicio Actividades: </strong>{configuracion-fecha_inicio_actividad}<br>
