--- a/static/modules/movimientofinanciero/tbl_movimientosmatriculado.html
+++ b/static/modules/movimientofinanciero/tbl_movimientosmatriculado.html
@@ -7,6 +7,12 @@
     <td>$VALOR</td>
     <td>
         <center>
+            <a class="btn btn-info btn-xs" href="file.php?f=notacredito/NotaCredito-CPID" target="_blank" title="Descargar curriculum" style="display: BTNDESNC;"><i class="fa fa-file-pdf-o"></i></a>
+            <a class="btn btn-danger btn-xs" href="{url_app}/movimientofinanciero/generar_notacredito/CPID" target="_blank" title="Descargar curriculum" style="display: BTNGENNC;">Generar NC</a>
+        </center>
+    </td>
+    <td>
+        <center>
             <a class="btn btn-info btn-xs" href="file.php?f=comprobantepago/ComprobantePago-CPID" target="_blank" title="Descargar curriculum"><i class="fa fa-file-pdf-o"></i></a>
         </center>
     </td>
