--- a/static/modules/movimientofinanciero/diario.html
+++ b/static/modules/movimientofinanciero/diario.html
@@ -22,7 +22,7 @@
                 <thead>
                     <tr>
                         <th>Fecha</th>
-                        <th>Marticulado</th>
+                        <th>Matriculado</th>
                         <th>Concepto</th>
                         <th>Tipo</th>
                         <th>Importe</th>
