--- a/static/modules/movimientofinanciero/tbl_movimientosmatriculado.html
+++ b/static/modules/movimientofinanciero/tbl_movimientosmatriculado.html
@@ -8,7 +8,7 @@
     <td>
         <center>
             <a class="btn btn-info btn-xs" href="file.php?f=notacredito/NotaCredito-CPID" target="_blank" title="Descargar NC" style="display: BTNDESNC;"><i class="fa fa-file-pdf-o"></i></a>
-            <a class="btn btn-danger btn-xs" href="{url_app}/movimientofinanciero/generar_notacredito/CPID" target="_blank" title="Generar NC" style="display: BTNGENNC;">Generar NC</a>
+            <a class="btn btn-danger btn-xs" href="{url_app}/movimientofinanciero/generar_notacredito/CPID" title="Generar NC" style="display: BTNGENNC;">Generar NC</a>
         </center>
     </td>
     <td>
