--- a/static/common/plantilla_comprobante_nc.html
+++ b/static/common/plantilla_comprobante_nc.html
@@ -20,10 +20,10 @@
                                 <strong>Consejo Profesional de la Ingeniería La Rioja </strong>
                             </td>
                             <td style="width: 4% !important; border-left: 1px #000 solid; border-right: 1px #000 solid; border-bottom: 1px #000 solid; text-align: center; font-size: 15px;">
-                                <strong>RC</strong><br>
+                                <strong>NCC</strong><br>
                             </td>
                             <td style="width: 48% !important; text-align: right; font-size: 15px; padding-left: 15px;">
-                                <strong>RECIBO</strong><br>
+                                <strong>NOTA CRÉDITO C</strong><br>
                                 <strong>{notacredito-punto_venta}-{notacredito-numero_factura} RC</strong><br>
                                 <font style="font-size: 11px;">Fecha: {notacredito-fecha}</font>
                             </td>
