Terminando notas de credito

--- a/static/common/plantilla_comprobante_nc.html
+++ b/static/common/plantilla_comprobante_nc.html
@@ -108,8 +108,8 @@
                                 Esta Administración Federal no se responsabiliza por los datos ingresados en el detalle de la operación.
                             </td>
                             <td style="text-align: right; width: 40% !important; font-size: 13px;">
-                                CAE: {notacredito-cae}<br>
-                                Vto. CAE: {notacredito-cae_vencimiento}
+                                CAE: {notacredito-numero_cae}<br>
+                                Vto. CAE: {notacredito-vencimiento_cae}
                             </td>
                         </tr>
                     </table>
