Terminando notas de credito

--- a/static/common/plantilla_comprobante_nc.html
+++ b/static/common/plantilla_comprobante_nc.html
@@ -24,7 +24,7 @@
                             </td>
                             <td style="width: 48% !important; text-align: right; font-size: 15px; padding-left: 15px;">
                                 <strong>NOTA CRÉDITO C</strong><br>
-                                <strong>{notacredito-punto_venta}-{notacredito-numero_factura} RC</strong><br>
+                                <strong>{notacredito-punto_venta}-{notacredito-numero_factura} NCC</strong><br>
                                 <font style="font-size: 11px;">Fecha: {notacredito-fecha}</font>
                             </td>
                         </tr>
