Terminando notas de credito

--- a/static/common/plantilla_comprobante_nc.html
+++ b/static/common/plantilla_comprobante_nc.html
@@ -91,7 +91,7 @@
                                     <tr style=" text-align: center; width: 100% !important;">
                                         <td style="width: 65%; border-top: 1px #000 solid; border-right: 1px solid; text-align: left; font-size: 11px;"></td>
                                         <td style="width: 35%; border-top: 1px #000 solid; text-align: right; font-size: 13px; background-color: #ccc;">
-                                            <strong>Importe Total: ${notacredito-importe_total}</strong>
+                                            <strong>Importe Total: ${notacredito-total}</strong>
                                         </td>
                                     </tr>
                                 </table>
