Modificando nota de credito

--- a/static/modules/movimientofinanciero/diario.html
+++ b/static/modules/movimientofinanciero/diario.html
@@ -26,8 +26,8 @@
                         <th>Concepto</th>
                         <th>Tipo</th>
                         <th>Importe</th>
-                        <th>NC</th>
-                        <th>COMP</th>
+                        <th>Nota de Crédito</th>
+                        <th>Recibo</th>
                     </tr>
                 </thead>
                 <tbody>
