Agregando razon social

--- a/static/common/plantilla_comprobante_pago.html
+++ b/static/common/plantilla_comprobante_pago.html
@@ -52,15 +52,15 @@
                                 <table cellspacing="0" style="width: 100% !important;">
                                     <tr style=" text-align: center; font-size: 12px;">
                                         <td style="width: 65% !important; text-align: left;">
-                                            Sres: <b>{matriculado-apellido} {matriculado-nombre}</b>
+                                            Sres: <b>{denominacion_cliente}</b>
                                         </td>
                                         <td style="width: 35% !important; text-align: left;">
-                                            Doc: {matriculado-documento}
+                                            Doc: {documento_cliente}
                                         </td>
                                     </tr>
                                     <tr style=" text-align: center; font-size: 12px;">
                                         <td style="width: 100% !important; text-align: left;" colspan="2">
-                                            Dom.: {matriculado-domicilio}
+                                            Dom.: {domicilio_cliente}
                                         </td>
                                     </tr>
                                 </table>
