--- a/static/modules/matriculado/matriculas.html
+++ b/static/modules/matriculado/matriculas.html
@@ -135,9 +135,13 @@
                         <label>Número Transferencia</label>
                         <input type="text" class="form-control" name="numero_transferencia" id="numero_transferencia">
                     </div>
-                    <div class="form-group col-lg-4 col-lg-offset-4 col-md-12 col-sm-12 col-xs-12">
-                        <label>CUIT/CUIL</label>
+                    <div class="form-group col-lg-4 col-md-12 col-sm-12 col-xs-12">
+                        <label>CUIT</label>
                         <input type="number" class="form-control" id="cuit" name="cuit" value="0" required>
+                    </div>
+                    <div class="form-group col-lg-4 col-md-12 col-sm-12 col-xs-12">
+                        <label>Razón Social</label>
+                        <input type="text" class="form-control" id="razon_social" name="razon_social" value="0" required>
                     </div>
                     <div class="form-group col-lg-4 col-md-12 col-sm-12 col-xs-12">
                         <label>Importe</label>
