--- a/static/modules/matriculado/matriculas.html
+++ b/static/modules/matriculado/matriculas.html
@@ -141,7 +141,7 @@
                     </div>
                     <div class="form-group col-lg-4 col-md-12 col-sm-12 col-xs-12">
                         <label>Razón Social</label>
-                        <input type="text" class="form-control" id="razon_social" name="razon_social" value="0" required>
+                        <input type="text" class="form-control" id="razon_social" name="razon_social" value="-" required>
                     </div>
                     <div class="form-group col-lg-4 col-md-12 col-sm-12 col-xs-12">
                         <label>Importe</label>
